--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -33,3 +33,23 @@ margin: 60px 0;
 .marketing p + h4 {
 margin-top: 28px;
 }
+
+.photo {
+width:200px;
+height:200px;
+}
+
+.under
+{
+position:absolute;
+left:0px;
+top:0px;
+z-index:-1;
+}
+.over
+{
+position:absolute;
+left:40px;
+top:10px;
+z-index:-1;
+}
